start the  chat functionality

--- a/proper_final_1_ambedkar.ipynb
+++ b/proper_final_1_ambedkar.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNRLlKq8wOXfwAFyLJ4IdOb"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -28,8 +13,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "📚 Welcome to Ambedkar 2.1 Ultra Pro - Indian Legal Assistant\n",
             "🔑 Enter your plan ID (555 or 1111): 555\n",
@@ -286,6 +271,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -293,14 +279,10 @@
         "id": "b8459f23",
         "outputId": "6322e1a5-62ac-4277-ac0f-58648091d276"
       },
-      "source": [
-        "%pip install PyPDF2 docx2txt googletrans==4.0.0-rc1 beautifulsoup4 requests"
-      ],
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting PyPDF2\n",
             "  Downloading pypdf2-3.0.1-py3-none-any.whl.metadata (6.8 kB)\n",
@@ -405,7 +387,25 @@
             "\u001b[0mSuccessfully installed PyPDF2-3.0.1 chardet-3.0.4 docx2txt-0.9 googletrans-4.0.0rc1 h11-0.9.0 h2-3.2.0 hpack-3.0.0 hstspreload-2025.1.1 httpcore-0.9.1 httpx-0.13.3 hyperframe-5.2.0 idna-2.10 rfc3986-1.5.0\n"
           ]
         }
+      ],
+      "source": [
+        "%pip install PyPDF2 docx2txt googletrans==4.0.0-rc1 beautifulsoup4 requests"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNRLlKq8wOXfwAFyLJ4IdOb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
