--- a/final_fast_ambedkar.ipynb
+++ b/final_fast_ambedkar.ipynb
@@ -1,34 +1,18 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyP2J/b4T11Jif6TdLXJI79M",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MEET4150/AMBEDKAR.AI/blob/master/final_fast_ambedkar.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "=<a href=\"https://colab.research.google.com/github/MEET4150/AMBEDKAR.AI/blob/master/final_fast_ambedkar.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "SdAGNjECwZKR"
       },
@@ -132,7 +116,7 @@
         "# CORS middleware for frontend integration\n",
         "app.add_middleware(\n",
         "    CORSMiddleware,\n",
-        "    allow_origins=[\"*\"],  # Replace with your frontend domain in production\n",
+        "    allow_origins=[\"127.0.0.1\"],  # Replace with your frontend domain in production\n",
         "    allow_credentials=True,\n",
         "    allow_methods=[\"*\"],\n",
         "    allow_headers=[\"*\"],\n",
@@ -172,15 +156,16 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "tfXpRNNwwnye"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -188,14 +173,10 @@
         "id": "22dda061",
         "outputId": "0b659174-cf98-4744-8f96-8086c77c6d6d"
       },
-      "source": [
-        "%pip install PyPDF2 docx2txt googletrans==4.0.0-rc1 beautifulsoup4 requests"
-      ],
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting PyPDF2\n",
             "  Downloading pypdf2-3.0.1-py3-none-any.whl.metadata (6.8 kB)\n",
@@ -300,7 +281,26 @@
             "\u001b[0mSuccessfully installed PyPDF2-3.0.1 chardet-3.0.4 docx2txt-0.9 googletrans-4.0.0rc1 h11-0.9.0 h2-3.2.0 hpack-3.0.0 hstspreload-2025.1.1 httpcore-0.9.1 httpx-0.13.3 hyperframe-5.2.0 idna-2.10 rfc3986-1.5.0\n"
           ]
         }
+      ],
+      "source": [
+        "%pip install PyPDF2 docx2txt googletrans==4.0.0-rc1 beautifulsoup4 requests"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyP2J/b4T11Jif6TdLXJI79M",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
